--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-arsenic
-aiohttp
-bs4
-cchardet
-discord
-ffmpeg-python
-lxml
-numpy
-pandas
-PyNaCl
-python-dotenv
-pytube
-requests-html
-tweepy
+arsenic==21.8
+aiohttp==3.8.1
+bs4==0.0.1
+cchardet==2.1.7
+discord==1.7.3
+ffmpeg-python==0.2.0
+lxml==4.6.4
+numpy==1.21.4
+pandas==1.3.4
+PyNaCl==1.3.0
+python-dotenv==0.19.2
+pytube==11.0.1
+requests-html==0.10.0
+tweepy==4.4.0
